Atualização no modulu user

--- a/src/html/Cadaster.html
+++ b/src/html/Cadaster.html
@@ -49,7 +49,7 @@
       window.location.reload();
     }
     async function register() {
-      if (!(userName.value === '' && userPassword.value === '')) {
+      if (!(userName.value === '' || userPassword.value === '')) {
         const data = {
           name: userName.value,
           password: userPassword.value,
